test/testPrint/print7.out
print7.rask:3:11: error: missing closing parenthesis ')'

